Fix logic error for concurrency processing of biotas. Change logic of distributing biotas from start. Fix moving of caterpillar: it should not move. Change configurations for some animals for better balance.